# bogothoughts

./: .ghc.environment.x86_64-linux-9.6.7  .gitignore  Blog.hs  Convert.hs  asset-manifest.json  blog.yaml  index.html  package.json  posts.yaml  readme.md
css/: styles.css
haskell/: Blog.hs  Converter.hs  Main.hs  haskell.cabal  hello.txt  hie.yaml  template.html
js/: links.js
static/css/: main.a630012a.css  main.a630012a.css.map
static/js/: main.853675f4.js  main.853675f4.js.map
