cabal-version:   3.0
name:            haskell
version:         0.1.0.0
license:         NONE
build-type:      Simple

common warnings
    ghc-options: -Wall

executable haskell
    main-is:          Main.hs
    other-modules:    Blog, Converter
    build-depends:    base, aeson, yaml, bytestring, lucid, text, cmark-gfm
    default-language: Haskell2010
    ghc-options: -Wall -Wincomplete-patterns
